Fixed some margins and spacing in the MTD Page

--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -149,6 +149,7 @@ footer {
     flex-wrap: wrap;
     width: 95%;
     margin-left: 2%;
+    align-items: flex-start;
 
     @media(max-width: 500px){ 
        .flexbox(space-evenly, center);
@@ -165,6 +166,10 @@ footer {
         text-align: left;
         padding: 2px;
         
+        h2 {
+            margin-top: 1%;
+            margin-bottom: 3%;
+        }
         
 
         @media(max-width: 500px){
